--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.294.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "framer-motion": "^10.16.0",
+    "isomorphic-dompurify": "^2.26.0",
+    "lucide-react": "^0.294.0",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "@tailwindcss/typography": "^0.5.0"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0"
   }
 }
